--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,9 @@
-# .github/workflows/build.yml
-
 name: Build Geode Mod
 
+permissions:
+  contents: write
+
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -15,38 +12,74 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { name: Windows, os: windows-latest, platform: win }
-          - { name: macOS, os: macos-latest, platform: mac }
-          - { name: Android32, os: ubuntu-latest, platform: android32 }
-          - { name: Android64, os: ubuntu-latest, platform: android64 }
+          - name: Windows
+            os: windows-latest
+          - name: macOS
+            os: macos-latest
+          - name: Android64
+            os: ubuntu-latest
+            target: Android64
+          - name: Android32
+            os: ubuntu-latest
+            target: Android32
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Build mod
+      - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          platform: ${{ matrix.config.platform }}
+          combine: true
+          target: ${{ matrix.config.target }}
+          # Убираем sdk: latest — пусть использует версию из mod.json
 
   package:
-    name: Package .geode
+    name: Combine and Deploy
     runs-on: ubuntu-latest
-    needs: build
+    needs: ['build']
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Combine artifacts
+      - name: Combine builds
         uses: geode-sdk/build-geode-mod/combine@main
-        id: package
+        id: build
 
-      - name: Upload .geode
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: dimension-shift
-          path: ${{ steps.package.outputs.build-output }}/*.geode
+          name: Build Output
+          path: ${{ steps.build.outputs.build-output }}
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Get mod properties
+        id: json_properties
+        uses: ActionsTools/read-json-action@main
+        with:
+          file_path: "mod.json"
+
+      - name: Update Nightly Release
+        uses: ncipollo/release-action@v1
+        with:
+          name: "Development Release"
+          body: "Auto-generated build for commit ${{ github.sha }}."
+          tag: "nightly"
+          prerelease: true
+          allowUpdates: true
+          removeArtifacts: true
+          artifacts: ${{ steps.build.outputs.build-output }}/*.geode
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Versioned Release
+        if: github.ref == 'refs/heads/main'
+        uses: ncipollo/release-action@v1
+        with:
+          name: "Release v${{ steps.json_properties.outputs.version }}"
+          tag: "v${{ steps.json_properties.outputs.version }}"
+          artifacts: ${{ steps.build.outputs.build-output }}/*.geode
+          allowUpdates: true
+          generateReleaseNotes: true
+          token: ${{ secrets.GITHUB_TOKEN }}
